Fill in gaps and fix colors
need to fix the footer

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -9,6 +9,7 @@
     --pinkPurple: #6B4E71;
     --darkBlue: #1C3144;
     --light-orange: #Ffd788;
+    --red: #Fc6868;
 }
 
 a:link {
@@ -28,13 +29,11 @@ a:active {
     text-decoration: none;
 }
 
-/*
 body {
-    background-color: var(--back-grey);
+    background-color: var(--red);
     width: 100%;
     height: 100%;
 }
-*/
 
 .navigation ul{
     display: flex;
@@ -58,7 +57,7 @@ nav {
     bottom: 0;
     margin: 0;
     padding: 0;
-    background-color: var(--darkBlue);
+    background-color: darkcyan;
     position: fixed;
     z-index: 20;    
 }
@@ -293,7 +292,7 @@ footer {
     width: 100%;
     height: 150px;
     top: 1110px;
-    background-color: var(--darkBlue);
+    background-color: darkcyan;
     color: var(--white);
     z-index: 10;
 }
